fix top bottom spacing all cards of logged in user

--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,9 @@ img {
   color: white;
 }
 
-.profile-email {
-  padding-top: 2em;
-  padding-bottom: 2em;
+.saved-homes-profile-update-card {
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .building-row {
